[gd_scene load_steps=13 format=3 uid="uid://c7sxxpmaukljm"]

[ext_resource type="PackedScene" uid="uid://bct6pd7l1iui0" path="res://scenes/ui/ui.tscn" id="1_qokvn"]
[ext_resource type="Texture2D" uid="uid://dfntc06od6x8o" path="res://scenes/cenários/entrada_principal/sprites/entrada principal.png" id="2_jpxrv"]
[ext_resource type="Texture2D" uid="uid://uqrppj3kb5p6" path="res://scenes/ui/sprites/botao seta direita.png" id="2_seqkc"]
[ext_resource type="PackedScene" uid="uid://cyl30kecp6emh" path="res://scenes/player/player.tscn" id="3_yg2wm"]
[ext_resource type="Script" uid="uid://ka0uhamnqi7i" path="res://porta_wc.gd" id="4_bjioa"]
[ext_resource type="Texture2D" uid="uid://d2deo6s3q37bx" path="res://scenes/ui/sprites/botao seta esquerda.png" id="4_ggjdn"]
[ext_resource type="Script" uid="uid://cqkl11w0140kj" path="res://scenes/cenários/entrada_principal/scripts/button_corredor.gd" id="5_g56wg"]
[ext_resource type="Script" uid="uid://dyr6u1dm2yvjo" path="res://scenes/cenários/entrada_principal/scripts/andar_cima.gd" id="5_i3nrj"]
[ext_resource type="Script" uid="uid://caxia7lc37vca" path="res://scenes/cenários/entrada_principal/scripts/button_cozinha.gd" id="7_hpoos"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3nrj"]
size = Vector2(145, 246)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpxrv"]
size = Vector2(456, 378)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_seqkc"]

[node name="EntradaPrincipal" type="Node2D"]

[node name="UI" parent="." instance=ExtResource("1_qokvn")]

[node name="button_cozinha" type="TextureButton" parent="UI"]
z_index = 5
offset_left = 1503.0
offset_top = 417.0
offset_right = 1607.0
offset_bottom = 515.0
texture_normal = ExtResource("2_seqkc")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_hpoos")
metadata/_edit_use_anchors_ = true

[node name="button_corredor" type="TextureButton" parent="UI"]
z_index = 5
offset_left = 321.0
offset_top = 417.0
offset_right = 425.0
offset_bottom = 515.0
texture_normal = ExtResource("4_ggjdn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_g56wg")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 292.0
offset_top = 95.0
offset_right = 1628.0
offset_bottom = 781.0
texture = ExtResource("2_jpxrv")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="player" parent="." instance=ExtResource("3_yg2wm")]
position = Vector2(974, 559)

[node name="porta_wc" type="Area2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("4_bjioa")
next_scene = "res://scenes/cenários/WC/wc.tscn"
player = NodePath("../player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="porta_wc"]
position = Vector2(1405, 421)
shape = SubResource("RectangleShape2D_i3nrj")

[node name="andar_cima" type="Area2D" parent="."]
script = ExtResource("5_i3nrj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="andar_cima"]
position = Vector2(515, 275)
shape = SubResource("RectangleShape2D_jpxrv")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.982175, 0.884682, 0.85272, 1)

[node name="CanvasModulate2" type="CanvasModulate" parent="."]
color = Color(0.947263, 0.946173, 0.999247, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_seqkc")

[connection signal="pressed" from="UI/button_cozinha" to="UI/button_cozinha" method="_on_pressed"]
[connection signal="pressed" from="UI/button_corredor" to="UI/button_corredor" method="_on_pressed"]
[connection signal="body_entered" from="porta_wc" to="porta_wc" method="_on_body_entered"]
[connection signal="body_exited" from="porta_wc" to="porta_wc" method="_on_body_exited"]
[connection signal="input_event" from="porta_wc" to="porta_wc" method="_on_input_event"]
[connection signal="mouse_entered" from="porta_wc" to="porta_wc" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="porta_wc" to="porta_wc" method="_on_mouse_exited"]
[connection signal="body_entered" from="andar_cima" to="andar_cima" method="_on_body_entered"]
[connection signal="body_exited" from="andar_cima" to="andar_cima" method="_on_body_exited"]
[connection signal="input_event" from="andar_cima" to="andar_cima" method="_on_input_event"]
